samoim/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samoim-front
  labels:
    app: samoim-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: samoim-front
  template:
    metadata:
      labels:
        app: samoim-front
    spec:
      containers:
      - name: samoim-front
        image: jin8227/samoim-front:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
