samoim/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: samoim-front-service
  labels:
    app: samoim-front
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 3010
  selector:
    app: samoim-front
